message remove tiny space above text

--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -167,7 +167,7 @@
             <div x-show="show" x-transition:enter="transform ease-out duration-300 transition" x-transition:enter-start="translate-y-2 opacity-0 sm:translate-y-0 sm:translate-x-2" x-transition:enter-end="translate-y-0 opacity-100 sm:translate-x-0" x-transition:leave="transition ease-in duration-100" x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" class="max-w-sm w-full shadow-lg rounded-lg pointer-events-auto ring-1 ring-black ring-opacity-5 overflow-hidden {% if message.tags %}message-{{ message.tags }}{% endif %}">
               <div class="p-4">
                 <div class="flex items-start">
-                  <div class="ml-3 w-0 flex-1 pt-0.5">
+                  <div class="ml-3 w-0 flex-1">
                     <p class="text-sm">{{ message }}</p>
                   </div>
                   <div class="ml-4 flex-shrink-0 flex">
