--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -19,13 +19,13 @@
       </p>
       {% if filter_form %}
         <!-- Filters -->
-        <section class="w-auto">
+        <div class="w-auto">
           <button type="button" class="group text-gray-950 dark:text-jumbo-100 font-medium flex items-center" aria-controls="filters" @click="open = !open" aria-expanded="false" x-bind:aria-expanded="open.toString()">
             {% heroicon_solid 'funnel' class="flex-none w-5 h-5 mr-2 text-gray-400 group-hover:text-gray-500" %}
             Filters
           </button>
           <div id="filter-heading" class="sr-only">Filters</div>
-        </section>
+        </div>
       {% endif %}
       {% if user.is_superuser and not object_list.model|to_class_name == "post" and not object_list.model|to_class_name == "customtag" and not object_list.model|to_class_name == "song" and not object_list.model|to_class_name == "artist" %}
         {% csb object_list.model %}
