--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -20,7 +20,7 @@
             Previous Post
           </a>
         {% else %}
-          <button disabled class="next_prev_buttons disabled:opacity-50">
+          <button type="button" disabled class="next_prev_buttons disabled:opacity-50">
             {% heroicon_outline "chevron-left" class="h-4 sm:h-5 w-4 sm:w-5" stroke_width=2 %}
             <!-- space -->
             Previous Post
@@ -33,7 +33,7 @@
             {% heroicon_outline "chevron-right" class="h-4 sm:h-5 w-4 sm:w-5" stroke_width=2 %}
           </a>
         {% else %}
-          <button disabled class="next_prev_buttons disabled:opacity-50">
+          <button type="button" disabled class="next_prev_buttons disabled:opacity-50">
             Next Post
             <!-- space -->
             {% heroicon_outline "chevron-right" class="h-4 sm:h-5 w-4 sm:w-5" stroke_width=2 %}
