--- a/khoBlog/templates/socialaccount/login.html
+++ b/khoBlog/templates/socialaccount/login.html
@@ -22,6 +22,6 @@
   <form method="post">
     {% csrf_token %}
 
-    <button class="kho-button-forms kho-button-submit" type="submit">Continue</button>
+    <button type="submit" class="kho-button-forms kho-button-submit">Continue</button>
   </form>
 {% endblock %}
