--- a/khoBlog/templates/tailwind/super_buttons.html
+++ b/khoBlog/templates/tailwind/super_buttons.html
@@ -48,7 +48,7 @@
                         Mark as Needs Reviewing
                       </a>
                     {% else %}
-                      <button class="dropdown_item w-full text-left" disabled="disabled">
+                      <button type="button" disabled class="dropdown_item w-full text-left">
                         Needs Reviewing
                       </button>
                     {% endif %}
