--- a/khoBlog/templates/account/email.html
+++ b/khoBlog/templates/account/email.html
@@ -28,9 +28,9 @@
         {% endfor %}
 
         <div class="mt-2 buttonHolder">
-          <button class="kho-button-forms kho-button-submit mb-2" type="submit" name="action_primary">{% trans 'Make Primary' %}</button>
-          <button class="kho-button-forms kho-button-submit mb-2" type="submit" name="action_send">{% trans 'Re-send Verification' %}</button>
-          <button class="kho-button-forms kho-button-submit-delete" type="submit" name="action_remove">{% trans 'Remove' %}</button>
+          <button type="submit" class="kho-button-forms kho-button-submit mb-2" name="action_primary">{% trans 'Make Primary' %}</button>
+          <button type="submit" class="kho-button-forms kho-button-submit mb-2" name="action_send">{% trans 'Re-send Verification' %}</button>
+          <button type="submit" class="kho-button-forms kho-button-submit-delete" name="action_remove">{% trans 'Remove' %}</button>
         </div>
 
       </fieldset>
