--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -12,6 +12,10 @@
     form :is(label, span) {
         @apply dark:text-jumbo-100;
     }
+
+    a[target="_blank"] {
+        @apply after:content-['_↗'] after:text-sm after:font-bold;
+    }
 }
 
 @layer components {
