--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -143,7 +143,7 @@
           </div>
         </nav>
         <div class="mt-8 flex justify-center space-x-6">
-          <a href="{% url 'shortener:url_redirect' slug='khoblog-github-repo' %}" class="text-gray-600 dark:text-jumbo-100 hover:text-gray-700 dark:hover:text-jumbo-200" target="_blank" rel="noopener noreferrer">
+          <a href="{% url 'shortener:url_redirect' slug='khoblog-github-repo' %}" class="text-gray-600 dark:text-jumbo-100 hover:text-gray-700 dark:hover:text-jumbo-200 no-blank" target="_blank" rel="noopener noreferrer">
             <span class="sr-only">GitHub</span>
             <!-- icon Github -->
             <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
