--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -472,6 +472,10 @@
     .todo_element {
         @apply whitespace-nowrap lg:whitespace-normal px-3 py-4 text-sm;
     }
+
+    a[target="_blank"].no-blank {
+        @apply after:content-none;
+    }
 }
 
 .message-warning {
