--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -64,6 +64,15 @@
       <div class="py-3 lg:pt-6 lg:pb-0">
         <div class="sr-only">Content</div>
         <div class="prose prose_base">
+          <div class="jump-links">
+            <ol>
+              {% for link in post.toc %}
+                <li>
+                  <a class="jump-link" href="{{ link.href }}" aria-label="{{ link.text }}: Jump to page section">{{ link.text }}</a>
+                </li>
+              {% endfor %}
+            </ol>
+          </div>
           {{ post.body_content|formatted_markdown|safe }}
         </div>
       </div>
