--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -478,6 +478,338 @@
     }
 }
 
+.toc {
+    @apply hidden;
+}
+
+/* .toc {
+    @apply bg-white rounded-full shadow-sm sticky flex text-[#5f6368] top-[85px] z-[999] w-fit max-h-12 max-w-[90vw] overflow-hidden text-center whitespace-nowrap before:left-0 after:right-0;
+
+    a {
+        @apply inline-block px-3 py-1.5 text-sm font-medium leading-4 hover:text-[#1a0dab] hover:underline;
+    }
+    /* background-color: #fff;
+    border-radius: 1000px;
+    -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+    color: #5f6368;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-family: "Google Sans", Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    margin: 0 auto;
+    max-height: 48px;
+    max-width: 90vw;
+    overflow: hidden;
+    position: -webkit-sticky;
+    position: sticky;
+    text-align: center;
+    top: 85px;
+    -webkit-transition: top 0.3s ease;
+    -o-transition: top 0.3s ease;
+    transition: top 0.3s ease;
+    white-space: nowrap;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    z-index: 799; */
+/* } */
+
+/* .toc::before {
+    background: -webkit-gradient(
+        linear,
+        right top,
+        left top,
+        from(rgba(255, 255, 255, 0)),
+        to(white)
+    );
+    background: -o-linear-gradient(right, rgba(255, 255, 255, 0) 0, #fff 100%);
+    background: linear-gradient(to left, rgba(255, 255, 255, 0) 0, #fff 100%);
+    left: 0;
+}
+
+.toc::after {
+    background: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        from(rgba(255, 255, 255, 0)),
+        to(white)
+    );
+    background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0, #fff 100%);
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0, #fff 100%);
+    right: 0;
+} */
+
+/* .toc::after,
+.toc::before {
+    bottom: 0;
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 20px;
+    z-index: 1;
+}
+
+.toc a {
+    display: inline-block;
+}
+
+.toc ul {
+    margin: 0;
+    -ms-overflow-style: none;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    padding: 0 10px;
+}
+
+.toc ul::-webkit-scrollbar {
+    height: 0;
+}
+
+.toc li {
+    display: inline-block;
+    list-style: none;
+}
+
+.toc li:first-child {
+    margin-left: 42px;
+}
+
+.toc li:last-child {
+    margin-right: 42px;
+}
+
+.toc a {
+    border-radius: 4px;
+    color: inherit;
+    display: inline-block;
+    line-height: 24px;
+    margin: 6px 0;
+    overflow: visible;
+    padding: 6px 12px;
+    position: relative;
+    text-decoration: none;
+}
+
+.toc a::after {
+    bottom: -6px;
+    content: "";
+    display: block;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: -6px;
+}
+
+.toc a[aria-current="true"] {
+    color: #202124;
+}
+
+.toc a:hover {
+    color: #202124;
+}
+
+.toc a:focus {
+    color: #202124;
+}
+
+.toc a:active {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    color: #202124;
+    outline: 0;
+}
+ .jump-link-target-our-commitments {
+    position: relative;
+    top: -50px;
+} */
+
+.jump-links {
+    background-color: #fff;
+    border-radius: 1000px;
+    -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+    color: #5f6368;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    margin: 0 auto;
+    max-height: 48px;
+    max-width: 90vw;
+    overflow: hidden;
+    position: -webkit-sticky;
+    position: sticky;
+    text-align: center;
+    top: 85px;
+    -webkit-transition: top 0.3s ease;
+    -o-transition: top 0.3s ease;
+    transition: top 0.3s ease;
+    white-space: nowrap;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    z-index: 799;
+}
+
+/* @media (min-width: 1024px) {
+    .jump-links {
+        display: none;
+        max-width: 640px;
+        overflow-x: hidden;
+    }
+} */
+
+[data-route="/guidance/"] .jump-links {
+    margin: 48px auto;
+}
+
+@media (min-width: 1024px) {
+    [data-route="/guidance/"] .jump-links {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+    }
+}
+
+.jump-links::before {
+    background: -webkit-gradient(
+        linear,
+        right top,
+        left top,
+        from(rgba(255, 255, 255, 0)),
+        to(white)
+    );
+    background: -o-linear-gradient(right, rgba(255, 255, 255, 0) 0, #fff 100%);
+    background: linear-gradient(to left, rgba(255, 255, 255, 0) 0, #fff 100%);
+    left: 0;
+}
+
+.jump-links::after {
+    background: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        from(rgba(255, 255, 255, 0)),
+        to(white)
+    );
+    background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0, #fff 100%);
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0, #fff 100%);
+    right: 0;
+}
+
+.jump-links::after,
+.jump-links::before {
+    bottom: 0;
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 20px;
+    z-index: 1;
+}
+
+.jump-links .jump-link {
+    display: inline-block;
+}
+
+@media (min-width: 1024px) {
+    .jump-links .jump-link {
+        display: inline-block;
+    }
+}
+
+.jump-links .jump-link--mobile {
+    display: inline-block;
+}
+
+@media (min-width: 1024px) {
+    .jump-links .jump-link--mobile {
+        display: none;
+    }
+}
+
+.jump-links.top {
+    top: 144px;
+}
+
+.jump-links ol {
+    margin: 0;
+    -ms-overflow-style: none;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    padding: 0 10px;
+    margin-top: 0;
+}
+
+.jump-links ol::-webkit-scrollbar {
+    height: 0;
+}
+
+.jump-links li {
+    display: inline-block;
+    list-style: none;
+    margin: 0;
+}
+
+.jump-links li:first-child {
+    margin-left: 42px;
+}
+
+.jump-links li:last-child {
+    margin-right: 42px;
+}
+
+.jump-links a {
+    border-radius: 4px;
+    color: inherit;
+    display: inline-block;
+    line-height: 24px;
+    overflow: visible;
+    padding: 6px 12px;
+    position: relative;
+    text-decoration: none;
+}
+
+.jump-links a::after {
+    bottom: -6px;
+    content: "";
+    display: block;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: -6px;
+}
+
+.jump-links a[aria-current="true"] {
+    color: #202124;
+}
+
+.jump-links a:hover {
+    color: #202124;
+}
+
+.jump-links a:focus {
+    color: #202124;
+}
+
+.jump-links a:active {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    color: #202124;
+    outline: 0;
+}
+
+.jump-link-target-our-commitments {
+    position: relative;
+    top: -50px;
+}
+
 .message-warning {
     @apply bg-orange-600 text-orange-50;
 }
